<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_nav_home_selector"
        android:title="Home"/>
    <item
        android:id="@+id/navigation_talent_pool"
        android:icon="@drawable/ic_nav_pool_selector"
        android:title="Articles"/>

    <item
        android:id="@+id/navigation_pairing"
        android:icon="@drawable/ic_nav_pair_selector"
        android:title="Discover"/>

    <item
        android:id="@+id/navigation_chat_list"
        android:icon="@drawable/ic_nav_chat_selector"
        android:title="Message"/>

    <item android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_nav_notification_selector"
        android:title="Notification"/>

</menu>