<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.willy.metu.util.CurrentFragmentType" />

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.willy.metu.MainViewModel" />

    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:visibility="@{viewModel.currentFragmentType == CurrentFragmentType.PAIRONE || viewModel.currentFragmentType == CurrentFragmentType.CHAT || viewModel.currentFragmentType == CurrentFragmentType.PAIRTWO || viewModel.currentFragmentType == CurrentFragmentType.PAIRTHREE || viewModel.currentFragmentType == CurrentFragmentType.PAIR || viewModel.currentFragmentType == CurrentFragmentType.USERPROFILE ? View.GONE : View.VISIBLE}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:navigationIcon="@drawable/toolbar_menu">

                    <TextView
                        android:id="@+id/text_toolbar_title"
                        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@{viewModel.currentFragmentType.value}"
                        android:visibility="@{viewModel.currentFragmentType == CurrentFragmentType.PAIRONE || viewModel.currentFragmentType == CurrentFragmentType.CHAT ? View.GONE : View.VISIBLE}"
                        tools:text="MeTu" />
                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.AppBarLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context=".MainActivity">

                <fragment
                    android:id="@+id/myNavHostFragment"
                    android:name="androidx.navigation.fragment.NavHostFragment"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:defaultNavHost="true"
                    app:layout_constraintBottom_toTopOf="@id/bottomNavView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:navGraph="@navigation/navigation" />

                <com.google.android.material.bottomnavigation.BottomNavigationView
                    android:id="@+id/bottomNavView"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_bottom_nav_view_main"
                    android:background="@color/white"
                    android:elevation="@dimen/elevation_all"
                    android:visibility="@{(viewModel.currentFragmentType == CurrentFragmentType.CALENDAR || viewModel.currentFragmentType == CurrentFragmentType.PAIRONE || viewModel.currentFragmentType == CurrentFragmentType.PROFILE || viewModel.currentFragmentType == CurrentFragmentType.EDITPROFILE || viewModel.currentFragmentType == CurrentFragmentType.USERPROFILE || viewModel.currentFragmentType == CurrentFragmentType.FOLLOW || viewModel.currentFragmentType == CurrentFragmentType.CHAT || viewModel.currentFragmentType == CurrentFragmentType.PAIRTWO || viewModel.currentFragmentType == CurrentFragmentType.PAIRTHREE || viewModel.currentFragmentType == CurrentFragmentType.NEWCHAT ) ? View.GONE : View.VISIBLE}"
                    app:itemIconSize="@dimen/size_bottom_nav_icon"
                    app:labelVisibilityMode="labeled"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:menu="@menu/bottom_nav_menu" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/drawerNavView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:menu="@menu/navdrawer_menu" />

    </androidx.drawerlayout.widget.DrawerLayout>
</layout>