...
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/welcome" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="8dp"
            android:clipChildren="false"
            android:elevation="4dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">


            <Button
                android:id="@+id/google_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_all_round_r8"
                android:drawableStart="@drawable/logo_google"
                android:gravity="center"
                android:paddingHorizontal="4dp"
...
