<resources>
    <string name="app_name">MeeTu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="you_shall_not_pass">You Shall Not Pass</string>
    <string name="spinner_select_member">Select Member</string>
    <string name="spinner_select_type">Select Type</string>
    <string name="spinner_select_category">Select Category</string>
    <string name="spinner_select_subject">Select Subject</string>
...
    <string name="all_caps_subject">SUBJECT</string>
    <string name="all_caps_detail">DETAIL</string>
    <string name="btn_post">POST</string>
    <string name="welcome">Welcome</string>
    <string name="btn_go">GO</string>
    <string name="btn_maybe_later">MAYBE LATER</string>
    <string name="sign_up_with_google">Sign Up With Google</string>
    <string name="channel_id">MeeTu</string>
    <string name="upcoming_appointment">Upcoming Appointment</string>
    <string name="notification_channel_description">MeeT Tutor</string>


    <string-array name="tag_array">
...
